test/syc/good/extfun.c
/*
 * Call external function
 */

int extfun(int a);

int call_extfun(void)
{
	return extfun(1);
}
